--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "author": "Dor Yahav",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/opus": "^0.3.3",
     "discord.js": "^12.5.1",
     "discord.js-commando": "^0.10.0",
+    "ffmpeg-static": "^4.2.7",
     "node-opus": "^0.3.3",
+    "yt-search": "^2.5.1",
     "ytdl-core": "^4.2.1"
   }
 }
